Extension: make options use sans-serif fonts

--- a/src/options.html
+++ b/src/options.html
@@ -22,6 +22,9 @@
     </div>
 
     <style>
+        * {
+            font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+        }
         .container {
             display: flex;
             justify-content: left;
