feat: add exact word match setting

--- a/src/pages/options.html
+++ b/src/pages/options.html
@@ -25,6 +25,12 @@
                 <label for="ignoreCase">Ignore letter case</label>
             </div>
         </div>  
+        <div class="field">
+            <div class="oneLineInputLabe">
+                <input type="checkbox" name="Match whole word" id="exactMatch">
+                <label for="exactMatch">Match whole word</label>
+            </div>
+        </div>  
     </div>
 
     <div class="category" id="buttons">
